--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,13 @@ html,
 body {
     width: 100%;
     height: 100%;
+    margin: 0;
 }
 .main {
     width: 90%;
     height: 90%;
     display: grid;
+    margin: 20px auto;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 4fr;
     gap: 10px;
@@ -17,11 +19,13 @@ body {
     grid-column: 1 / 3;
     grid-row: 1;
     border: 1px solid black;
+    border-radius: 10px;
 }
 .sidebar {
     grid-column: 1 ;
     grid-row: 2;
     border: 1px solid black;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -31,26 +35,34 @@ body {
     grid-column: 2;
     grid-row: 2;
     border: 1px solid black;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     overflow: auto;
 }
 
+
 div[class*='todo'] {
-    border: 1px solid black;
+    border: 2px solid rgb(5, 116, 14);
+    border-radius: 20px;
     margin-left: 20px;
     margin-right: 25px;
     display: flex;
     justify-content: space-between;
 }
 div[class*='project'] {
-    border: 1px solid black;
+    border: 2px solid rgb(5, 116, 14);
+    border-radius: 20px;
+    padding: 10px 15px;
     margin-left: 5px;
     margin-right: 10px;
 }
 div[class*='project']:active {
     border: 2px solid yellow;
+}
+div[class*='project'] h2 {
+    margin: 0 0 15px 0;
 }
 
 .folderForm {
@@ -59,6 +71,10 @@ div[class*='project']:active {
     align-items: center;
     justify-content:space-between;
     gap: 5px;
+    border: 2px solid rgb(38, 194, 51);
+    border-radius: 20px;
+    padding: 6px 12px;
+    margin: 5px 8px;
 
 }
 
@@ -78,15 +94,13 @@ div[class*='project']:active {
 #addTodo {
     margin: 5px;
 }
-.descContainer {
-    border: 1px solid black;
-    border-top: none;
+.descContainer, .restContainer {
+    border: 2px solid rgb(38, 194, 51);
+    border-radius: 20px;
+    margin: 5px 10px;
+    padding: 5px 10px;
 }
 
-.restContainer {
-    border: 1px solid black;
-    border-top: none;
-}
 .taskForm {
     display: flex;
     justify-content: space-between;
@@ -107,4 +121,19 @@ div[class*='project']:active {
     display: flex;
     align-items: center;
 }
+.header h1 {
+    margin: 30px 40px;
 
+
+}
+button {
+    all: unset;
+    cursor: pointer;
+    border: 2px solid rgb(38, 194, 51);
+    border-radius: 20px;
+    padding: 3px 6px;
+    background-color: aliceblue;
+}
+button:active {
+  outline: orange 5px auto;
+}
