--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,3 @@
-
 /* primary colors */
 :root {
   --primary-color: #007bff; /* Blue */
@@ -27,7 +26,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 4fr;
-    gap: 10px;
+    gap: 15px;
 
 }
 
@@ -71,7 +70,7 @@ body {
 
 
 div[class*='todo'], div[class*='project'] {
-    border: 2px solid var(--primary-color);
+    border: 3px solid var(--primary-color);
     border-radius: 20px;
     margin-left: 20px;
     margin-right: 25px;
@@ -82,11 +81,14 @@ div[class*='todo'], div[class*='project'] {
 }
 
 div[class*='project']:hover {
-    border: 2px solid var(--secondary-color);
+    border: 3px solid var(--dark-color);
 }
 div[class*='project'] h2 {
     margin: 0 0 15px 0;
     color: var(--dark-color);
+}
+div[class*='project'].clicked {
+    border: 3px solid var(--dark-color);
 }
 
 .folderForm {
@@ -112,12 +114,16 @@ div[class*='project'] h2 {
   color: var(--dark-color);
 }
 
+.descContainer{
+    width: 50%;
+    flex-shrink: 0;
+}
 .descContainer, 
 .restContainer {
     border: 2px solid var(--primary-color);
     border-radius: 20px;
     margin: 5px 10px;
-    padding: 5px 10px;
+    padding: 10px 20px;
 }
 
 .taskForm {
@@ -151,10 +157,12 @@ button {
     cursor: pointer;
     border: 2px solid var(--primary-color);
     border-radius: 20px;
-    padding: 4px 8px;
+    padding: 5px 10px;
     background-color: var(--light-color);
     color: var(--dark-color);
     font-weight: bold;
+    height: 20px;
+    width: 50px;
 }
 
     button:hover {
@@ -184,4 +192,43 @@ button {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #0062cc;
+}
+
+/* Styling input */
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid var(--secondary-color);
+  border-radius: 5px;
+  background-color: var(--light-color);
+  color: var(--dark-color);
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border: 2px solid var(--primary-color);
+}
+
+#create ,#addTodo {
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  border: none;
+  border-radius: 8px;
+  padding: 12px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#create:hover, #addTodo:hover {
+  background-color: #0056b3;
+}
+
+#create:active, #addTodo:active {
+  background-color: #004799;
+}
+label {
+    font-size: 23px;
 }
